SLING-4451 - Opening a resource in the browser does not obey the user's preferences
- use IWorkbenchBrowserSupport
- use the browser icon for this action instead of the generic Sling one

git-svn-id: https://svn.apache.org/repos/asf/sling/trunk/tooling/ide@1661440 13f79535-47bb-0310-9956-ffa450edef68

--- a/eclipse-ui/plugin.xml
+++ b/eclipse-ui/plugin.xml
@@ -456,7 +456,7 @@
             objectClass="org.apache.sling.ide.eclipse.ui.nav.model.JcrNode">
          <action
                class="org.apache.sling.ide.eclipse.ui.actions.OpenHtmlInBrowserAction"
-               icon="icons/obj16/sling_misc.gif"
+               icon="platform:/plugin/org.eclipse.ui.browser/icons/obj16/internal_browser.gif"
                id="org.apache.sling.ide.eclipse.ui.actionsOpenHtmlInBrowserAction"
                label="&amp;Open .html (on server) in browser"
                menubarPath="jcr">
@@ -535,7 +535,7 @@
          </action>
          <action
                class="org.apache.sling.ide.eclipse.ui.actions.OpenHtmlInBrowserAction"
-               icon="icons/obj16/sling_misc.gif"
+               icon="platform:/plugin/org.eclipse.ui.browser/icons/obj16/internal_browser.gif"
                id="org.apache.sling.ide.eclipse.ui.actionsOpenHtmlInBrowserAction"
                label="&amp;Open .html (on server) in browser"
                toolbarPath="common.open.menu/jcr">
