--- a/tooling/ide/impl-vlt-test/pom.xml
+++ b/tooling/ide/impl-vlt-test/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>org.apache.sling.ide</groupId>
     <artifactId>reactor</artifactId>
-    <version>1.0.5-SNAPSHOT</version>
+    <version>1.0.6</version>
   </parent>
   <artifactId>org.apache.sling.ide.impl-vlt-test</artifactId>
   <name>Sling IDE Tools: FileVault Implementation Tests</name>
