--- a/feature/pom.xml
+++ b/feature/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.apache.sling.ide</groupId>
     <artifactId>reactor</artifactId>
-    <version>1.0.5-SNAPSHOT</version>
+    <version>1.0.6</version>
   </parent>
   <artifactId>org.apache.sling.ide.feature</artifactId>
   <packaging>eclipse-feature</packaging>
