--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     </parent>
 	<groupId>org.apache.sling.ide</groupId>
 	<artifactId>reactor</artifactId>
-	<version>1.0.5-SNAPSHOT</version>
+	<version>1.0.6</version>
 	<packaging>pom</packaging>
 	<name>Sling IDE Tools: Reactor</name>
     <url>http://sling.apache.org</url>
