--- a/tooling/ide/p2update/pom.xml
+++ b/tooling/ide/p2update/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.apache.sling.ide</groupId>
     <artifactId>reactor</artifactId>
-    <version>1.0.6</version>
+    <version>1.0.7-SNAPSHOT</version>
   </parent>
   <artifactId>org.apache.sling.ide.p2update</artifactId>
   <packaging>eclipse-repository</packaging>
