--- a/contrib/extensions/urlrewriter/pom.xml
+++ b/contrib/extensions/urlrewriter/pom.xml
@@ -29,7 +29,7 @@
   </parent>
 
   <artifactId>org.apache.sling.urlrewriter</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.2</version>
   <packaging>bundle</packaging>
 
   <name>Apache Sling URL Rewriter</name>
@@ -42,9 +42,9 @@
   </properties>
 
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/sling/trunk/contrib/extensions/urlrewriter</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/trunk/contrib/extensions/urlrewriter</developerConnection>
-    <url>http://svn.apache.org/viewvc/sling/trunk/contrib/extensions/urlrewriter</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/sling/tags/org.apache.sling.urlrewriter-0.0.2</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/tags/org.apache.sling.urlrewriter-0.0.2</developerConnection>
+    <url>http://svn.apache.org/viewvc/sling/tags/org.apache.sling.urlrewriter-0.0.2</url>
   </scm>
 
   <dependencies>
@@ -124,7 +124,7 @@
         <extensions>true</extensions>
         <configuration>
           <instructions>
-            <Export-Package/>
+            <Export-Package />
             <Embed-Dependency>
               org.apache.sling.commons.osgi;inline="org/apache/sling/commons/osgi/PropertiesUtil.*"
             </Embed-Dependency>
