SLING-4312: Register an osgi service for each available service user (+ change tests to mockito)
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1662665 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/extensions/serviceusermapper/pom.xml
+++ b/bundles/extensions/serviceusermapper/pom.xml
@@ -97,6 +97,8 @@
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.core</artifactId>
+            <version>4.3.0</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
@@ -123,19 +125,7 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.apache.sling</groupId>
-            <artifactId>org.apache.sling.commons.testing</artifactId>
-            <version>2.0.6</version>
-            <scope>test</scope>
-            <exclusions>
-                <!-- slf4j simple implementation logs INFO + higher to stdout (we don't want that behaviour) -->
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-simple</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
+
         <!-- using log4j under slf4j to allow fine-grained logging config (see src/test/resources/log4j.properties) -->
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -147,6 +137,13 @@
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.13</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
