--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
                 <extensions>true</extensions>
+                <configuration>
+                    <instructions>
+                        <Export-Package>!*,org.apache.sling.query,org.apache.sling.query.api</Export-Package>
+                    </instructions>
+                </configuration>
             </plugin>
         </plugins>
     </build>
