SlingQuery should exporty only API
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1663977 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/extensions/sling-query/pom.xml
+++ b/contrib/extensions/sling-query/pom.xml
@@ -49,6 +49,11 @@
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
                 <extensions>true</extensions>
+                <configuration>
+                    <instructions>
+                        <Export-Package>!*,org.apache.sling.query,org.apache.sling.query.api</Export-Package>
+                    </instructions>
+                </configuration>
             </plugin>
         </plugins>
     </build>
