--- a/bundles/jcr/contentloader/pom.xml
+++ b/bundles/jcr/contentloader/pom.xml
@@ -174,6 +174,12 @@
       <version>1.4</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.6</version>
+      <scope>provided</scope>
+    </dependency>
     <!-- testing -->
     <dependency>
       <groupId>junit</groupId>
