SLING-4492 - Prevent configuring the ESAPI policies through random content files
* removed API methods that were allowing to create AntiSammy policies on-demand from random content files
* allow loading of custom policies from the implementation, only if the implementation class is used directly (e.g. through bundle embedding)
* corrected minor performance issue in LongValidationRule
* updated tests

git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1665939 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/extensions/xss/pom.xml
+++ b/contrib/extensions/xss/pom.xml
@@ -45,6 +45,10 @@
         <url>http://svn.apache.org/viewvc/sling/trunk/contrib/extensions/xss</url>
     </scm>
 
+    <properties>
+        <sling.java.version>6</sling.java.version>
+    </properties>
+
     <!-- ======================================================================= -->
     <!-- B U I L D                                                               -->
     <!-- ======================================================================= -->
@@ -278,6 +282,12 @@
             <artifactId>mockito-all</artifactId>
             <version>1.8.4</version>
             <type>jar</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-api-mockito</artifactId>
+            <version>1.5.5</version>
             <scope>test</scope>
         </dependency>
         <dependency>
