--- a/bundles/extensions/discovery/impl/pom.xml
+++ b/bundles/extensions/discovery/impl/pom.xml
@@ -24,7 +24,7 @@
         <groupId>org.apache.sling</groupId>
         <artifactId>sling</artifactId>
         <version>22</version>
-        <relativePath>../../../parent/pom.xml</relativePath>
+        <relativePath>../../../../parent/pom.xml</relativePath>
     </parent>
 
     <artifactId>org.apache.sling.discovery.impl</artifactId>
@@ -249,12 +249,6 @@
         	<version>3.1.0</version>
         	<type>bundle</type>
         	<scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.sling</groupId>
-            <artifactId>org.apache.sling.testing.tools</artifactId>
-            <version>1.0.2</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
