--- a/installer/providers/jcr/pom.xml
+++ b/installer/providers/jcr/pom.xml
@@ -28,7 +28,7 @@
     </parent>
 
     <artifactId>org.apache.sling.installer.provider.jcr</artifactId>
-    <version>3.1.13-SNAPSHOT</version>
+    <version>3.1.14</version>
     <packaging>bundle</packaging>
 
     <name>Apache Sling JCR Installer</name>
@@ -38,9 +38,9 @@
     </description>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/sling/trunk/installer/providers/jcr</connection>
-        <developerConnection> scm:svn:https://svn.apache.org/repos/asf/sling/trunk/installer/providers/jcr</developerConnection>
-        <url>http://svn.apache.org/viewvc/sling/trunk/installer/providers/jcr/</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/sling/tags/org.apache.sling.installer.provider.jcr-3.1.14</connection>
+        <developerConnection> scm:svn:https://svn.apache.org/repos/asf/sling/tags/org.apache.sling.installer.provider.jcr-3.1.14</developerConnection>
+        <url>http://svn.apache.org/viewvc/sling/tags/org.apache.sling.installer.provider.jcr-3.1.14</url>
     </scm>
 
     <build>
