SLING-4502 Create contrib directory
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1666585 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/sling-s3/Makefile
+++ b/contrib/sling-s3/Makefile
@@ -32,8 +32,10 @@ start-s3-mongo: target/crank-s3-mongo.txt contrib/crankstart.jar
 	java -jar contrib/crankstart.jar target/crank-s3-mongo.txt
 
 install-deps: contrib/oak-s3 contrib/org.apache.sling.launchpad.karaf contrib/crankstart.jar
-	cd contrib/oak-s3; mvn clean install; cd ../..
-	cd contrib/org.apache.sling.launchpad.karaf; mvn clean install; cd ../..
+        mkdir -p contrib; cd contrib
+	cd contrib/oak-s3; mvn clean install; cd ..
+	cd contrib/org.apache.sling.launchpad.karaf; mvn clean install; cd ..
+        cd ..
 
 update-bundles:
 	rm crank.d/*-sling-startlevel-*.txt
