Update to released slingstart maven plugin and sync with launchpad builder list
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1666656 13f79535-47bb-0310-9956-ffa450edef68

--- a/launchpad/slingstart/pom.xml
+++ b/launchpad/slingstart/pom.xml
@@ -73,11 +73,21 @@
             <plugin>
                 <groupId>org.apache.sling</groupId>
                 <artifactId>slingstart-maven-plugin</artifactId>
-                <version>0.0.1-SNAPSHOT</version>
+                <version>1.0.4</version>
                 <extensions>true</extensions>
                 <configuration>
                     <createWebapp>true</createWebapp>
                 </configuration>
+<!--
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>start</goal>
+                            <goal>stop</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                -->
             </plugin>
         </plugins>
     </build>
