SLING-4508 export packages of embedded Thymeleaf
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1667015 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/scripting/thymeleaf/pom.xml
+++ b/contrib/scripting/thymeleaf/pom.xml
@@ -174,7 +174,8 @@
         <configuration>
           <instructions>
             <Export-Package>
-              org.apache.sling.scripting.thymeleaf
+              org.apache.sling.scripting.thymeleaf,
+              org.thymeleaf.*;version="2.1.4.RELEASE"
             </Export-Package>
             <Import-Package>
               org.apache.commons.io.input;version="1.4.9999",
