@trivial: added license headers to pass RAT check
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1667070 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/scripting/sightly/repl/pom.xml
+++ b/contrib/scripting/sightly/repl/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.sling</groupId>
         <artifactId>sling</artifactId>
-        <version>15</version>
+        <version>22</version>
         <relativePath/>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -46,6 +46,22 @@
     </properties>
 
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <!-- Extend RAT configuration from parent pom -->
+                    <groupId>org.apache.rat</groupId>
+                    <artifactId>apache-rat-plugin</artifactId>
+                    <configuration>
+                        <excludes combine.children="append">
+                            <exclude>src/main/resources/SLING-INF/**/*.json</exclude>
+                            <exclude>src/main/resources/SLING-INF/**/*.svg</exclude>
+                        </excludes>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.felix</groupId>
