Added install-deps goal
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1667614 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/sling-s3/Makefile
+++ b/contrib/sling-s3/Makefile
@@ -41,5 +41,8 @@ update-bundles:
 	rm crank.d/*-sling-startlevel-*.txt
 	$(BUNDLES)
 
+install-deps:
+	./scripts/download_dependencies.rb *.d/*
+
 clean:
 	rm -rf target sling
