Sling-s3 - download crankstart.jar in the install-deps goal
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1667626 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/sling-s3/Makefile
+++ b/contrib/sling-s3/Makefile
@@ -41,7 +41,7 @@ update-bundles:
 	rm crank.d/*-sling-startlevel-*.txt
 	$(BUNDLES)
 
-install-deps:
+install-deps: contrib/crankstart.jar
 	./scripts/download_dependencies.rb *.d/*
 
 clean:
