Add node and node_modules to .gitignore
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1670021 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/explorers/resourceeditor/.gitignore
+++ b/contrib/explorers/resourceeditor/.gitignore
@@ -12,3 +12,5 @@ jcrbrowser/src/main/resources/SLING-INF/libs/jcrbrowser/content/css/bootstrap.cs
 jcrbrowser/.externalToolBuilders/Maven_Ant_Builder.launch
 jcrbrowser/maven-eclipse.xml
 org.sboehme.treeview/.externalToolBuilders/Maven_Ant_Builder.launch
+/frontend/node
+/frontend/node_modules
