SLING-4517 Re-enabled debian module
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1670965 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/pom.xml
+++ b/contrib/pom.xml
@@ -137,7 +137,7 @@
           <module>scripting/xproc</module>
           <module>launchpad/karaf</module>
           <module>launchpad/testing</module>
-          <!--module>launchpad/debian</module-->
+          <module>launchpad/debian</module>
     </modules>
     <profiles>
         <profile>
