SLING-4517 Add warning if there is no runmode selected. Re-enabled debian package in the contrib pom.xml. Added oak-s3 to the contrib pom.xml
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1671021 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/pom.xml
+++ b/contrib/pom.xml
@@ -109,6 +109,7 @@
           <module>extensions/distribution/core</module>
           <module>extensions/distribution/sample</module>
           <module>extensions/distribution/it</module>
+          <module>extensions/oak-s3</module>
           <module>extensions/reqanalyzer</module>
           <module>extensions/resourcemerger</module>
           <module>extensions/rewriter</module>
@@ -137,7 +138,7 @@
           <module>scripting/xproc</module>
           <module>launchpad/karaf</module>
           <module>launchpad/testing</module>
-          <!--module>launchpad/debian</module-->
+          <module>launchpad/debian</module>
     </modules>
     <profiles>
         <profile>
