SLING-4578 - Incorrect Sightly JS Use-API script dependency resolution
* explicitly check component inheritance when resolving script dependencies
* provided tests for Use API dependency inheritance
* made sure IT are run in the same order on all platforms

git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1671688 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/scripting/sightly/testing/pom.xml
+++ b/contrib/scripting/sightly/testing/pom.xml
@@ -125,6 +125,7 @@
                     <dependenciesToScan>
                         <dependency>io.sightly:io.sightly.tck</dependency>
                     </dependenciesToScan>
+                    <runOrder>alphabetical</runOrder>
                     <excludes>
                         <exclude>${failsafe.exclude}</exclude>
                     </excludes>
@@ -235,7 +236,7 @@
                         <bundle>
                             <groupId>org.apache.sling</groupId>
                             <artifactId>org.apache.sling.scripting.sightly.js.provider</artifactId>
-                            <version>1.0.0</version>
+                            <version>1.0.1-SNAPSHOT</version>
                             <startLevel>20</startLevel>
                         </bundle>
                         <bundle>
