releng: added Sightly to contrib reactor
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1671692 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/pom.xml
+++ b/contrib/pom.xml
@@ -132,6 +132,7 @@
           <module>scripting/java</module>
           <module>scripting/jst</module>
           <module>scripting/python</module>
+          <module>scripting/sightly</module>
           <module>scripting/ruby</module>
           <module>scripting/thymeleaf</module>
           <module>scripting/velocity</module>
