SLING-4606 fix SCM infos, reference launchpad in released version 7, build validation with the default reactor
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1672661 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/extensions/validation/pom.xml
+++ b/bundles/extensions/validation/pom.xml
@@ -32,10 +32,9 @@
     </modules>
 
     <scm>
-        <connection>scm:git:https://github.com/raducotescu/org.apache.sling.validation.git</connection>
-        <developerConnection>scm:git:git@github.com:raducotescu/org.apache.sling.validation.git</developerConnection>
-        <tag>HEAD</tag>
-        <url>https://github.com/raducotescu/org.apache.sling.validation</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/sling/trunk/bundles/extensions/validation</connection>
+        <developerConnection> scm:svn:https://svn.apache.org/repos/asf/sling/trunk/bundles/extensions/validation</developerConnection>
+        <url>http://svn.apache.org/viewvc/sling/trunk/bundles/extensions/validation</url>
     </scm>
 
     <name>Apache Sling Validation Framework Builder</name>
