Add missing projects
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1672663 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/pom.xml
+++ b/contrib/pom.xml
@@ -112,7 +112,9 @@
           <module>extensions/oak-s3</module>
           <module>extensions/reqanalyzer</module>
           <module>extensions/resourcemerger</module>
+          <module>extensions/resource-inventory</module>
           <module>extensions/rewriter</module>
+          <module>extensions/security</module>
           <module>extensions/slf4j-mdc</module>
           <module>extensions/sling-query</module>
           <module>extensions/superimposing</module>
